--- a/assets/css/main-moive.css
+++ b/assets/css/main-moive.css
@@ -49,7 +49,7 @@ nav ul {
   padding: 0;
   display: flex;
   justify-content: space-around;
-  border: 1px solid black;
+  border: 1px solid gray;
   margin: 0 var(--regular-spacing);
   background-color: var(--main-search-color);
   border-radius: 5px;
@@ -74,7 +74,7 @@ form .MainSearch {
   margin: 0 var(--regular-spacing);
   text-align: center;
   border-radius: 20px;
-  border: 1.2px solid black;
+  border: 1.2px solid gray;
   background-color: var(--main-search-color);
   box-shadow: 3px 3px 20px gray;
 }
@@ -121,12 +121,5 @@ form .MainSearch .CompareBox input:active {
   }
   form .MainSearch {
     width: 800px;
-    height: 300px;
-    margin: 0 var(--regular-spacing);
-    text-align: center;
-    border-radius: 20px;
-    border: 1.2px solid black;
-    background-color: var(--main-search-color);
-    box-shadow: 3px 3px 20px gray;
   }
 }
