--- a/assets/css/main-news.css
+++ b/assets/css/main-news.css
@@ -49,7 +49,7 @@ nav ul {
   padding: 0;
   display: flex;
   justify-content: space-around;
-  border: 1px solid gray;
+  border: 1px solid black;
   margin: 0 var(--regular-spacing);
   background-color: var(--main-search-color);
   border-radius: 5px;
@@ -61,6 +61,9 @@ nav ul li {
 }
 nav ul li a {
   color: black;
+}
+nav ul li a:hover {
+  color: bisque;
 }
 /* form */
 form {
@@ -74,7 +77,7 @@ form .MainSearch {
   margin: 0 var(--regular-spacing);
   text-align: center;
   border-radius: 20px;
-  border: 1.2px solid gray;
+  border: 1.2px solid black;
   background-color: var(--main-search-color);
   box-shadow: 3px 3px 20px gray;
 }
@@ -121,5 +124,12 @@ form .MainSearch .CompareBox input:active {
   }
   form .MainSearch {
     width: 800px;
+    height: 300px;
+    margin: 0 var(--regular-spacing);
+    text-align: center;
+    border-radius: 20px;
+    border: 1.2px solid black;
+    background-color: var(--main-search-color);
+    box-shadow: 3px 3px 20px gray;
   }
 }
