--- a/assets/css/result.css
+++ b/assets/css/result.css
@@ -49,7 +49,7 @@ nav ul {
   padding: 0;
   display: flex;
   justify-content: space-around;
-  border: 1px solid black;
+  border: 1px solid gray;
   margin: 0 var(--regular-spacing);
   background-color: var(--main-search-color);
   border-radius: 5px;
@@ -65,52 +65,55 @@ nav ul li a {
 nav ul li a:hover {
   color: bisque;
 }
-/* form */
-form {
+
+main {
   width: 100%;
   display: flex;
   justify-content: center;
 }
-form .MainSearch {
+main .MainSearch {
   width: 414px;
   height: 300px;
   margin: 0 var(--regular-spacing);
   text-align: center;
   border-radius: 20px;
-  border: 1.2px solid black;
+  border: 1.2px solid gray;
   background-color: var(--main-search-color);
   box-shadow: 3px 3px 20px gray;
 }
-form .MainSearch .SearchContiner {
+main .MainSearch .SearchContiner {
+  width: 414px;
   display: flex;
   height: 200px;
   justify-content: space-evenly;
   align-items: center;
 }
-form .MainSearch .SearchContiner .vs {
+main .MainSearch .SearchContiner .vs {
   height: 50px;
   line-height: 50px;
 }
-form .MainSearch .SearchContiner .SearchBox {
+main .MainSearch .SearchContiner .SearchBox {
   border: 1.5px solid black;
   border-radius: 5px;
+  width: 300px;
+  height: 200px;
 }
-form .MainSearch .SearchContiner .SearchBox input {
+main .MainSearch .SearchContiner .SearchBox input {
   display: inline-block;
   border: none;
 }
-form .MainSearch .CompareBox {
+main .MainSearch .CompareBox {
   width: 60px;
   margin: 0 auto;
 }
-form .MainSearch .CompareBox input {
+main .MainSearch .CompareBox input {
   display: inline-block;
   border-radius: 5px;
   box-shadow: 1px 1px 1px;
   outline: none;
   background-color: #fffff6;
 }
-form .MainSearch .CompareBox input:active {
+main .MainSearch .CompareBox input:active {
   box-shadow: -1px -1px 1px;
   background-color: #e0e0e0;
 }
@@ -124,12 +127,8 @@ form .MainSearch .CompareBox input:active {
   }
   form .MainSearch {
     width: 800px;
-    height: 300px;
-    margin: 0 var(--regular-spacing);
-    text-align: center;
-    border-radius: 20px;
-    border: 1.2px solid black;
-    background-color: var(--main-search-color);
-    box-shadow: 3px 3px 20px gray;
+  }
+  main .MainSearch .SearchContiner {
+    width: 800px;
   }
 }
